Home screen completed

--- a/src/layouts/NavBar/navbar.css
+++ b/src/layouts/NavBar/navbar.css
@@ -2,12 +2,8 @@
   position: fixed;
   top: 0;
   left: 0;
-  width: 350px;
+  width: 100vw;
   height: 100vh;
-  background-color: rgba(0, 0, 0);
-}
-.burger-main {
-  z-index: 99999999999;
 }
 .overlay-slide-right {
   transition: all 0.4s ease-in-out;
