Completed google signin auth and added roadmap making the project close to being finished

--- a/src/pages/Auction/auction.css
+++ b/src/pages/Auction/auction.css
@@ -144,3 +144,10 @@
   }
 
 }
+
+@media screen and (max-width: 550px) {
+  /* For Roadmap */
+  .euzbmD, .hRoNdo {
+    padding: 0 !important;
+  }
+}
